[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Meshes/game-result-board-mesh.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Fonts/Calistoga/Calistoga-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Audio/button-press-sound.wav" type="AudioStream" id=3]
[ext_resource path="res://scripts/ChooseLevelDialog.gd" type="Script" id=4]

[sub_resource type="SpatialMaterial" id=6]

[sub_resource type="CubeMesh" id=3]
material = SubResource( 6 )
size = Vector3( 0.05, 0.4, 0.9 )

[sub_resource type="DynamicFont" id=7]
size = 42
font_data = ExtResource( 2 )

[sub_resource type="ViewportTexture" id=4]
viewport_path = NodePath("NoTimeLimitLevelButton/Viewport")

[sub_resource type="BoxShape" id=8]
extents = Vector3( 0.025, 0.2, 0.45 )

[sub_resource type="SpatialMaterial" id=9]

[sub_resource type="CubeMesh" id=5]
material = SubResource( 9 )
size = Vector3( 0.05, 0.4, 0.9 )

[sub_resource type="DynamicFont" id=11]
size = 42
font_data = ExtResource( 2 )

[sub_resource type="ViewportTexture" id=12]
viewport_path = NodePath("TimeAttackLevelButton/Viewport")

[sub_resource type="BoxShape" id=10]
extents = Vector3( 0.025, 0.2, 0.45 )

[sub_resource type="DynamicFont" id=13]
size = 42
font_data = ExtResource( 2 )

[sub_resource type="ViewportTexture" id=14]
viewport_path = NodePath("GameModeInfoSection/Viewport")

[node name="ChooseLevelDialog" type="MeshInstance"]
script = ExtResource( 4 )

[node name="NoTimeLimitLevelButton" type="MeshInstance" parent="."]
transform = Transform( 0.963448, 0, 0.267894, 0, 1, 0, -0.267894, 0, 0.963448, 0.22783, -0.203113, 0.717823 )
mesh = SubResource( 3 )
material/0 = null

[node name="Viewport" type="Viewport" parent="NoTimeLimitLevelButton"]
size = Vector2( 400, 400 )
transparent_bg = true
render_target_v_flip = true

[node name="Label" type="Label" parent="NoTimeLimitLevelButton/Viewport"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 7 )
text = "No Time Limit"

[node name="Sprite3D" type="Sprite3D" parent="NoTimeLimitLevelButton"]
transform = Transform( -7.45058e-09, 0, 0.3, 0, 0.3, 0, -0.3, 0, -7.45058e-09, 0.0287741, -0.498509, -0.197521 )
modulate = Color( 0.117647, 0.564706, 0.937255, 1 )
texture = SubResource( 4 )

[node name="NoTimeLimitLevelButtonArea" type="Area" parent="NoTimeLimitLevelButton"]

[node name="CollisionShape" type="CollisionShape" parent="NoTimeLimitLevelButton/NoTimeLimitLevelButtonArea"]
shape = SubResource( 8 )

[node name="TimeAttackLevelButton" type="MeshInstance" parent="."]
transform = Transform( 0.963448, 0, -0.267894, 0, 1, 0, 0.267894, 0, 0.963448, 0.202, -0.203, -0.725 )
mesh = SubResource( 5 )
material/0 = null

[node name="Viewport" type="Viewport" parent="TimeAttackLevelButton"]
size = Vector2( 400, 400 )
transparent_bg = true
render_target_v_flip = true

[node name="Label" type="Label" parent="TimeAttackLevelButton/Viewport"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 11 )
text = "Time Attack"

[node name="Sprite3D" type="Sprite3D" parent="TimeAttackLevelButton"]
transform = Transform( -1.49012e-08, 0, 0.3, 0, 0.3, 0, -0.3, 0, -1.49012e-08, 0.0262668, -0.508507, -0.247375 )
modulate = Color( 0.933333, 0.607843, 0.0235294, 1 )
texture = SubResource( 12 )

[node name="TimeAttackLevelButtonArea" type="Area" parent="TimeAttackLevelButton"]

[node name="CollisionShape" type="CollisionShape" parent="TimeAttackLevelButton/TimeAttackLevelButtonArea"]
shape = SubResource( 10 )

[node name="game-result-board-mesh" parent="." instance=ExtResource( 1 )]

[node name="GameModeInfoSection" type="Spatial" parent="."]

[node name="Viewport" type="Viewport" parent="GameModeInfoSection"]
size = Vector2( 400, 400 )
transparent_bg = true
render_target_v_flip = true

[node name="Label" type="Label" parent="GameModeInfoSection/Viewport"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 13 )
text = "Choose game mode"

[node name="Sprite3D" type="Sprite3D" parent="GameModeInfoSection"]
transform = Transform( -1.31134e-08, 0, 0.3, 0, 0.3, 0, -0.3, 0, -1.31134e-08, 0.125484, -0.148913, -0.0981828 )
texture = SubResource( 14 )

[node name="ButtonPressSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="area_entered" from="NoTimeLimitLevelButton/NoTimeLimitLevelButtonArea" to="." method="_on_NoTimeLimitLevelButtonArea_area_entered"]
[connection signal="area_entered" from="TimeAttackLevelButton/TimeAttackLevelButtonArea" to="." method="_on_TimeAttackLevelButtonArea_area_entered"]
